# marketplace-bulk-workstation

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: main.tsx  styles.css
docs/: agent-onboarding.md  agent-playbook.md  playwright-posting.md  research-pipeline.md
examples/: generic_inventory_template.csv  generic_template_item.json  research_result_template.json  sample_project.json
marketplace_bulk/: __init__.py  app.py  importers.py  local_recognition.py  photo_intake.py  storage.py  validation.py
scripts/: facebook_marketplace_worker.js  local_recognition.py  macos_vision_extract.swift  marketplace_app.py
tests/: test_marketplace_bulk_core.py
