[project]
name = "marketplace-bulk-workstation"
version = "0.1.0"
description = "Sell to 1 BTC local-first Marketplace listing and progress tracker."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "python-multipart",
  "openpyxl",
  "Pillow",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
