[project]
name = "marketplace-bulk-workstation"
version = "0.1.0"
description = "Bulk Facebook Marketplace Poster with a Path to 1 BTC side tracker."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "python-multipart",
  "openpyxl",
  "Pillow",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
